--- a/apps/bitcoin-halving/src/index.html
+++ b/apps/bitcoin-halving/src/index.html
@@ -2,12 +2,61 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>BitcoinHalving</title>
+    <title><strong>BitcoinHalving</strong></title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="mat-typography">
+    <article>
+      <h1>¿Qué es el halving de <strong>Bitcoin</strong>?</h1>
+      <p>
+        El halving es un evento en el que la recompensa de bloque de una
+        criptomoneda se divide a la mitad con el fin de reducir su nivel de
+        emisión. Fue inicialmente implementando en <strong>Bitcoin</strong> y
+        desde entonces es uno de los procesos más importante en su sistema
+        económico.
+      </p>
+      <p></p>
+
+      <p>
+        El halving, es un proceso automatizado de reducción a la mitad de los
+        bitcoins que reciben los mineros como recompensa por la creación de un
+        bloque. Fue creado para incentivar el minado mediante prueba de trabajo.
+        Esto por el establecimiento con cada cierto número de bloques, la
+        emisión debe reducirse a la mitad.
+      </p>
+
+      <p>
+        La primera criptomoneda en poner en práctica este proceso fue el
+        <strong>Bitcoin</strong>. Todo esto porque la cantidad de bitcoins que
+        podrán llegar a existir es finita y está establecida en el software de
+        <strong>Bitcoin</strong> en 21 millones de bitcoins. Ni uno más. El
+        software de <strong>Bitcoin</strong> establece que los bitcoins se irán
+        liberando para recompensar a los mineros a medida que crean bloques
+        validando transacciones, a un ritmo de cada 10 minutos de media.
+      </p>
+
+      <p>
+        No obstante, el número de bitcoins que se liberan no siempre es el
+        mismo, está establecido por el software que cada cierto número de
+        bloques se reduzca a la mitad. Este proceso automatizado, se denomina
+        halving y sirve para establecer un tiempo determinado hasta el fin de la
+        emisión de monedas con el objetivo de perseguir un modelo deflacionario,
+        o lo que es lo mismo, que suba su valor de manera paulatina.
+      </p>
+
+      <h2>¿Cuando ocurrirá el halving de Bitcoin?</h2>
+      <div id="countdown"></div>
+    </article>
     <bitcoinhalving-root></bitcoinhalving-root>
   </body>
 </html>
